# gdm-faker

./: .gitignore  README.md  hello.py  main.py  pyproject.toml  sql.py
faker.basket/: create_index_tables.py  generate_baskets.py  start_calculation_service.py
faker.basket/examples/: curve.py  example_ql.py
faker.financing/: .env  create_tables.py  deploy_computeservice.py  draft_table.sql  generate_refdata.py  generate_risk.py  generate_trades.py  main.py  pricingservice.py
faker.financing/archieve/: generate_refdata.py  generate_risk.py  generate_trades.py  main.py
