[project]
name = "gdm-faker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chdb>=2.0.4",
    "clickhouse-connect>=0.7.19",
    "faker>=29.0.0",
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "prefect>=3.1.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.0.1",
]
